--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,13 +13,16 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.0",
+    "@mui/joy": "^5.0.0-alpha.88",
     "@mui/material": "^5.14.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "timeago.js": "^4.0.2",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
