--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,11 +15,13 @@
     "@mui/icons-material": "^5.14.0",
     "@mui/joy": "^5.0.0-alpha.88",
     "@mui/material": "^5.14.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "timeago.js": "^4.0.2",
     "validator": "^13.9.0"
