--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,12 +17,14 @@
     "@mui/material": "^5.14.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
+    "redux-persist": "^6.0.0",
     "timeago.js": "^4.0.2",
     "validator": "^13.9.0"
   },
